<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="10dp"
        android:layout_margin="2dp">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                        android:id="@+id/row_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorBoarder">

                        <TextView
                                android:id="@+id/view_school"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:padding="20dp"
                                android:text="@string/school_name"
                                android:textColor="@color/colorBlack" />
                </TableRow>

                <TableRow
                        android:id="@+id/row_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/head_master"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/staff"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/girls"
                                android:textColor="@color/colorBlack" />
                </TableRow>

                <TableRow
                        android:id="@+id/row_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp">

                        <TextView
                                android:id="@+id/head_master"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/staffs_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/no_girls_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="#E6E6FA"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                </TableRow>

                <TableRow
                        android:id="@+id/row_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/boys"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/mToilet"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/sToilet"
                                android:textColor="@color/colorBlack" />

                </TableRow>
                <TableRow
                        android:id="@+id/row_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp">

                        <TextView
                                android:id="@+id/boys_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/mToilets_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/sToilets_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                </TableRow>
                <TableRow
                        android:id="@+id/row_7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/toilet"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/dustBin"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/tap"
                                android:textColor="@color/colorBlack" />

                </TableRow>

                <TableRow
                        android:id="@+id/row_8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp">

                        <TextView
                                android:id="@+id/toilets_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/dustBins_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/taps_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="1dp"
                                android:background="@color/colorTable"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorBlack" />

                </TableRow>

        </TableLayout>
</android.support.v7.widget.CardView>
